Fix language detection for C++ files

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,6 @@
 # Declare files that are truly binary and should not be modified.
-*.hpp linguist-language=C++
 *.cpp linguist-language=C++
+*.hpp linguist-language=C++
+*.h linguist-language=C++
+
+
